# riofs

./: .gitignore  Cargo.toml
src/: decrypt.rs  error.rs  lib.rs  test.rs
src/decrypt/: helper.rs
