[package]
name = "riofs"
version = "0.1.0"
authors = ["Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"
description = "Handles ShiinaRio archive."
readme = "../README.md"
documentation = "https://docs.rs/riofs"
repository = "https://github.com/3c1u/riofs"
keywords = ["warc", "vn", "shiina-rio"]
# license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
failure = "0.1.8"
flate2 = "1.0.16"
chrono = "0.4.13"
lazy_static = "1.4.0"
png = "0.16.6"

[features]
default = []
